--- a/stack.yaml
+++ b/stack.yaml
@@ -12,7 +12,10 @@ Parameters:
     AllowedPattern: "arn:aws:acm:.*"
   S3BucketName:
     Type: String
-    Description: Name for the bucket
+    Description: Name for the bucket hosting the website
+  S3ApexBucketName:
+    Type: String
+    Description: Name for the apex bucket
 Resources:
   S3BucketForWebsiteContent:
     Type: AWS::S3::Bucket
@@ -29,6 +32,14 @@ Resources:
             RedirectRule:
               HostName: !Ref 'DomainName'
               ReplaceKeyPrefixWith: error/404/
+  S3BucketForApex:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Ref 'S3ApexBucketName'
+      WebsiteConfiguration:
+        RedirectAllRequestsTo:
+          HostName: !Sub 'www.${DomainName}'
+          Protocol: 'https'
   WebsiteCloudfront:
     Type: AWS::CloudFront::Distribution
     Properties:
@@ -43,12 +54,43 @@ Resources:
         HttpVersion: 'http2'
         # DefaultRootObject: index.html
         Aliases:
-        - !Ref 'DomainName'
-        - !Join [ '', [ 'www.', !Ref 'DomainName' ]]
+        - !Sub 'www.${DomainName}'
         CustomErrorResponses:
           - ErrorCode: 403
             ResponseCode: 404
             ResponsePagePath: '/error/404/index.html'
+        DefaultCacheBehavior:
+          AllowedMethods:
+          - GET
+          - HEAD
+          - OPTIONS
+          Compress: true
+          TargetOriginId: S3Origin
+          ForwardedValues:
+            QueryString: false
+            Cookies:
+              Forward: none
+          ViewerProtocolPolicy: redirect-to-https
+          ResponseHeadersPolicyId: !Ref WebsiteCloudFrontPolicies
+        PriceClass: PriceClass_All
+        ViewerCertificate:
+          AcmCertificateArn: !Ref 'AcmCertificateArn'
+          SslSupportMethod: sni-only
+  WebsiteApexCloudfront:
+    Type: AWS::CloudFront::Distribution
+    Properties:
+      DistributionConfig:
+        Comment: Cloudfront Distribution pointing to the apex S3 bucket to redirect to www for HTTPS
+        Origins:
+        - DomainName: !Join [ '', !Split [ 'http://', !GetAtt 'S3BucketForApex.WebsiteURL' ] ]
+          Id: S3Origin
+          CustomOriginConfig:
+            OriginProtocolPolicy: 'http-only'
+        Enabled: true
+        HttpVersion: 'http2'
+        # DefaultRootObject: index.html
+        Aliases:
+        - !Sub '${DomainName}'
         DefaultCacheBehavior:
           AllowedMethods:
           - GET
@@ -101,40 +143,14 @@ Resources:
             ModeBlock: true
             Protection: true
             Override: false
-  WebsiteRoute53:
-    Type: AWS::Route53::RecordSetGroup
-    Properties:
-      HostedZoneId: Z05116532RL9IYBYJ5EC5
-      RecordSets:
-      - Name: www.areweserveryet.org
-        Type: A
-        AliasTarget:
-          DNSName: !GetAtt WebsiteCloudfront.DomainName
-          EvaluateTargetHealth: false
-          HostedZoneId: Z2FDTNDATAQYW2 # From AWS docs: This is always the hosted zone ID when you create an alias record that routes traffic to a CloudFront distribution.
-      - Name: www.areweserveryet.org
-        Type: AAAA
-        AliasTarget:
-          DNSName: !GetAtt WebsiteCloudfront.DomainName
-          EvaluateTargetHealth: false
-          HostedZoneId: Z2FDTNDATAQYW2 # From AWS docs: This is always the hosted zone ID when you create an alias record that routes traffic to a CloudFront distribution.
-      - Name: areweserveryet.org
-        Type: A
-        AliasTarget:
-          DNSName: !GetAtt WebsiteCloudfront.DomainName
-          EvaluateTargetHealth: false
-          HostedZoneId: Z2FDTNDATAQYW2 # From AWS docs: This is always the hosted zone ID when you create an alias record that routes traffic to a CloudFront distribution.
-      - Name: areweserveryet.org
-        Type: AAAA
-        AliasTarget:
-          DNSName: !GetAtt WebsiteCloudfront.DomainName
-          EvaluateTargetHealth: false
-          HostedZoneId: Z2FDTNDATAQYW2 # From AWS docs: This is always the hosted zone ID when you create an alias record that routes traffic to a CloudFront distribution.
 
 Outputs:
   CloudfrontURL:
     Description: 'Cloudfront URL'
     Value: !GetAtt WebsiteCloudfront.DomainName
+  ApexCloudfrontURL:
+    Description: 'Cloudfront APEX URL'
+    Value: !GetAtt WebsiteApexCloudfront.DomainName
   BucketName:
     Value: !Ref 'S3BucketForWebsiteContent'
     Description: Name of S3 bucket to hold website content
